Add right user dashboard placeholder, modify style to fit all in lg size

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -60,8 +60,13 @@
         </div>
 
         <!-- Right content: Other statistics -->
-        <div class="right-result-container col-md-3">
-
+        <div class="right-result-container col-md-3 visible-lg">
+            <div class="home-user-trends">
+                <h3 class="trend-title">Trends</h3>
+                <ul id="home-trend-list">
+                    <li><a href="./search?q=%23loklak">#loklak</a></li>
+                </ul>
+            </div>
         </div>
 
 
