--- a/app/styles/_home.scss
+++ b/app/styles/_home.scss
@@ -57,17 +57,23 @@
 			width: 32%;
 			text-align: left;
 			overflow: hidden;
-			padding: 10px 10px;
+			padding: 10px 5px;
 			box-sizing: border-box;
+			&:first-child {
+				padding-left: 10px;
+			}
+			&:last-child {
+				padding-right: 10px;
+			}
 			a {
 				text-align: left;
-				font-size: 13px;
+				font-size: 12px;
 				color: #8c9ca9;
 				text-transform: uppercase;
 				line-height: 22px;
 				span {
 					color: #2b7bb9;
-					font-size: 20px;
+					font-size: 18px;
 					font-weight: 500;
 				}
 			}
