--- a/app/views/wall/templates/coa.html
+++ b/app/views/wall/templates/coa.html
@@ -4,7 +4,7 @@
         <!-- Main content -->
         <p class="coa-content-text" ng-class="data.images.length>0?'col-xs-9':'col-xs-12'" ng-bind-html="data.text | tweetMention | tweetHashtag | toTrusted"></p>
         <!-- Images -->
-        <img alt="" class="col-xs-3" ng-if="data.images.length>0" ng-src="{{data.images[0]}}">
+        <img alt="" class="col-xs-3" ng-if="data.images.length>0" ng-src="{{data.images[0] | instaFilter}}">
         <!--         <div data-ng-click="open(data.id_str);" ng-class="{'images-wrapper': true, 'showdetail': showdetail}" ng-if="data.images_count"> -->
        <!--  <div masonry="{ transitionDuration: '1s'}" item-selector=".masonry-brick">
             <div class="masonry-brick" ng-repeat="image in data.images">
