--- a/app/views/wall/templates/linear.html
+++ b/app/views/wall/templates/linear.html
@@ -3,7 +3,7 @@
     <div class="linear-content row">
         <!-- <div class="row"> -->
             <!-- Main content -->
-            <p class="linear-content-text" ng-class="data.images.length>0?'col-xs-9':'col-xs-12'" ng-bind-html="data.text | tweetMention | tweetHashtag | toTrusted"></p>
+            <p class="linear-content-text" ng-class="data.images.length>0?'col-xs-9':'col-xs-12'" ng-bind-html="data.text | tweetMention | tweetHashtag | tweetTextLink | toTrusted"></p>
             <!-- Images -->
             <div style="height: 100%;" class="col-xs-3">
                 <img alt="" ng-if="data.images.length>0" ng-src="{{data.images[0] | instaFilter}}">
