Change view profile action to home instead of twitter profile

--- a/app/views/signin-twitter.html
+++ b/app/views/signin-twitter.html
@@ -3,7 +3,7 @@
 		<div class="hidden-user-info hide">
 			<ul class="top-options">
 				<li>
-					<a ng-href="{{'https://twitter.com/' + twitterSession.screen_name}}">
+					<a href="./home">
 					<span class="full-name">{{twitterSession.name}}</span><br>
 					<span class="metadata">View profile</span>
 					</a>
