implement Connect page to add external services (IoT, Email) & data sources
  Issues : #205 #206
  Server side requirements :
   https://github.com/loklak/loklak_server/issues/35
   https://github.com/loklak/loklak_server/issues/37
   https://github.com/loklak/loklak_server/issues/58 (implemented)
   https://github.com/loklak/loklak_server/pull/59 (implemented)

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -8,6 +8,7 @@
 // Partials
 @import 'topnav';
 @import 'home';
+@import 'data-connect';
 * {
     font-family: $font-family;
 }
@@ -2013,7 +2014,7 @@
 		text-align: center;
 		padding: 20% 0;
 	}
-	.wall-modal-dialog {
+	.wall-modal-dialog, .data-connect-modal-dialog {
 	  width: 100%;
 	  height: 95%;
 	  margin-top: 10px;
