--- a/app/views/data-connect/data-connect.html
+++ b/app/views/data-connect/data-connect.html
@@ -4,7 +4,7 @@
 <div class="content-wrapper">
 
 	<div class="container-fluid content-container">
-		<div class="data-connect-panel">
+		<div id="data-connect-panel">
 			<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#data-connect-modal">My Connections</button>
 		</div>
 	</div>
