--- a/app/views/advancedsearch.html
+++ b/app/views/advancedsearch.html
@@ -30,7 +30,12 @@
 				<div class="form-section location-section">
 					<h3>Place</h3>
 					<h4 class="field-title">Near this place</h4>
-					<div><input type="text" ng-model="chosenLocation" class="chosen-location" ng-click="advanced.toggleShowLookUp()"></div>
+					<div>
+						<input type="text" ng-model="chosenLocation" class="chosen-location" ng-click="advanced.toggleShowLookUp()">
+						<ul class="suggestions" ng-show="advanced.hasSuggestions">
+							<li ng-repeat="location in advanced.locationSuggestions | limitTo:5" ng-click="advanced.setLocation(location.query)">{{location.query}}</li>
+						</ul>
+					</div>
 					<span class="location-hint">Click to change/choose location</span>
 					<br>
 				</div>
