--- a/app/views/wall/create.html
+++ b/app/views/wall/create.html
@@ -3,25 +3,27 @@
 <link rel="stylesheet" type="text/css" href="css/bootstrap.vertical-tabs.min.css">
 <!-- <link rel="stylesheet" type="text/css" href="css/angular-toggle-switch.css"> -->
 <div class="content-wrapper">
-    <section class="content-header">
-    </section>
-    <section class="content">
-        <div>
-            <h1>My Twitter Walls{{userWalls.length}}</h1>
-            <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#wall-modal">Create a new wall</button>
-        </div>
-        <div ng-hide="root.twitterSession" style="margin-top: 20px;" class="well alert alert-info">
-            <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-            <strong>Please sign up to start saving your twitter walls.</strong>
-        </div>
-        <div ng-if="root.twitterSession && (userWalls.length<=0)" style="margin-top: 20px;" class="well alert alert-info">
-            <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-            <strong>You haven't created any walls yet.</strong>
-        </div>
-        <ul ng-if="userWalls.length>0" class="wall-thumbnail-container">
-            <li ng-repeat="wallObj in userWalls" data="wallObj" wallthumbnail>
-            </li>
-        </ul>
-    </section>
+    <div class="container content-container">
+        <section class="content-header">
+        </section>
+        <section class="content">
+            <div class="row" style="clear: both;">
+                <h1 style="float:left;margin-top:0px;">My Twitter Walls{{userWalls.length}}</h1>
+                <button style="float:right;" type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#wall-modal">Create a new wall</button>
+            </div>
+            <div ng-hide="root.twitterSession" style="margin-top: 20px;" class="well alert alert-info">
+                <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+                <strong>Please sign up to start saving your twitter walls.</strong>
+            </div>
+            <div ng-if="root.twitterSession && (userData.wall.walls.length<=0)" style="margin-top: 20px;" class="well alert alert-info">
+                <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+                <strong>You haven't created any walls yet.</strong>
+            </div>
+            <ul ng-if="userData.wall.walls.length>0" class="wall-thumbnail-container">
+                <li ng-repeat="wallObj in userData.wall.walls" data="wallObj" delete-wall="deleteWall($index)" wallthumbnail>
+                </li>
+            </ul>
+        </section>
+    </div>
 </div>
 <div ng-include="'wall/wallCreationModal.html'"></div>
