--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -600,7 +600,7 @@
 				margin-left: 58px;
 				
 				.tweet-content-text {
-					word-break: break-all;
+					word-break: keep-all;
 					color: #292f33;
 					font-size: 14px;
 					line-height: 18px;
@@ -975,7 +975,7 @@
 							color: #8899A6;
 						}
 						.tweet-content-text {
-							word-break: break-all;
+							word-break: keep-all;
 							color: #292f33;
 							font-size: 14px;
 							line-height: 18px;
@@ -1634,7 +1634,7 @@
         	max-width: 100%;
         }
         .linear-content-text {
-            word-break: break-all;
+            word-break: keep-all;
             color: #292f33;
             font-size: 26px;
             line-height: 120%;
@@ -1768,7 +1768,7 @@
 	                    color: #8899A6;
 	                }
 	                .tweet-content-text {
-	                    word-break: break-all;
+	                    word-break: keep-all;
 	                    color: #292f33;
 	                    font-size: 14px;
 	                    line-height: 18px;
@@ -1969,7 +1969,7 @@
 	        	max-height: 390px;
 	        }
 	        .coa-content-text {
-	            word-break: break-all;
+	            word-break: keep-all;
 	            color: #292f33;
 	            font-size: 40px;
 	            line-height: 160%;
@@ -2041,7 +2041,7 @@
 	        	max-width: 100%;
 	        }
 	        .card-content-text {
-	            word-break: break-all;
+	            word-break: keep-all;
 	            color: #292f33;
 	            font-size: 16px;
 	            line-height: 120%;
@@ -2167,7 +2167,7 @@
 	                    color: #8899A6;
 	                }
 	                .tweet-content-text {
-	                    word-break: break-all;
+	                    word-break: keep-all;
 	                    color: #292f33;
 	                    font-size: 14px;
 	                    line-height: 18px;
