--- a/app/views/wall/create.html
+++ b/app/views/wall/create.html
@@ -20,7 +20,7 @@
                 <strong>You haven't created any walls yet.</strong>
             </div>
             <ul ng-if="userData.wall.walls.length>0" class="wall-thumbnail-container">
-                <li ng-repeat="wallObj in userData.wall.walls" data="wallObj" delete-wall="deleteWall($index)" wallthumbnail>
+                <li ng-repeat="wallObj in userData.wall.walls" data="wallObj" delete-wall="deleteWall($index)" edit-wall="editWall($index)" wallthumbnail>
                 </li>
             </ul>
         </section>
